# ethmsg

./: Cargo.toml  Makefile  README.md
.github/workflows/: CI.yaml
src/: main.rs  provider.rs  receive.rs  send.rs
