[package]
name = "ethmsg"
version = "0.1.0"
authors = ["Yuichiro Aoki"]
description = "Messaging on chain"
repository = "https://github.com/yuichiroaoki/ethmsg"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
dotenv = "0.15.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version =  "1.21.2", features = ["rt-multi-thread", "macros"] }